gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/traits_parameters.d
version https://git-lfs.github.com/spec/v1
oid sha256:441fb7af2137844649086002cf6a9cbaae5d0c8992ebef84dbe069f533d24578
size 323
